cluster workflow working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(diagnostic_df)
 export(diagnostic_plot)
 export(make_cluster_df)
 export(make_clusters)
-export(make_indval_df)
+export(make_ind_val_df)
 export(make_sil_df)
 export(sites_with_freq_taxa)
 export(sites_with_indicator)
