make_wide_df made and now optionally used in make_ind_val_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(make_cluster_df)
 export(make_clusters)
 export(make_ind_val_df)
 export(make_sil_df)
+export(make_wide_df)
 export(sites_with_freq_taxa)
 export(sites_with_indicator)
 importFrom(magrittr,"%>%")
