--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export("%>%")
 export(calc_ss)
+export(cluster_sil_text)
 export(cluster_summarise)
 export(clusters_with_freq_taxa)
 export(clusters_with_indicator)
 export(diagnostic_df)
 export(diagnostic_plot)
 export(make_cluster_df)
+export(make_cluster_sil_mean)
 export(make_clusters)
 export(make_ind_val_df)
 export(make_sil_df)
