`make_neigh_text

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(calc_ss)
-export(cluster_sil_text)
 export(cluster_summarise)
 export(clusters_with_freq_taxa)
 export(clusters_with_indicator)
@@ -12,6 +11,7 @@ export(make_cluster_df)
 export(make_cluster_sil_mean)
 export(make_clusters)
 export(make_ind_val_df)
+export(make_neigh_text)
 export(make_sil_df)
 export(make_sil_plot)
 export(make_wide_df)
