--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(diagnostic_plot)
 export(make_cluster_df)
 export(make_cluster_sil_mean)
 export(make_clusters)
+export(make_clusters_explore)
 export(make_ind_val_df)
 export(make_neigh_text)
 export(make_sil_df)
