Tweaked metric df/plot and moved them to `envFunc`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(calc_wss)
 export(cluster_summarise)
 export(clusters_with_freq_taxa)
 export(clusters_with_indicator)
-export(diagnostic_df)
-export(diagnostic_plot)
 export(make_cluster_df)
 export(make_cluster_sil_mean)
 export(make_clusters)
 export(make_clusters_explore)
 export(make_ind_val_df)
+export(make_metric_df)
+export(make_metric_plot)
 export(make_neigh_text)
 export(make_sil_df)
 export(make_sil_plot)
