--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,13 @@
 
 export("%>%")
 export(calc_wss)
-export(cluster_summarise)
-export(clusters_with_freq_taxa)
-export(clusters_with_indicator)
-export(make_cluster_df)
-export(make_cluster_sil_mean)
 export(make_clusters)
 export(make_clusters_explore)
+export(make_freq_df)
+export(make_gap_df)
 export(make_ind_val_df)
 export(make_neigh_text)
 export(make_sil_df)
 export(make_sil_plot)
 export(make_wide_df)
-export(sites_with_freq_taxa)
-export(sites_with_indicator)
 importFrom(magrittr,"%>%")
