clusters_summarise -> make_summary_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(make_ind_val_df)
 export(make_neigh_text)
 export(make_sil_df)
 export(make_sil_plot)
+export(make_summary_df)
 export(make_wide_df)
 importFrom(magrittr,"%>%")
