--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_wss)
 export(decorate_dend)
 export(make_clusters)
 export(make_clusters_explore)
+export(make_dend)
 export(make_freq_df)
 export(make_gap_df)
 export(make_ind_val_df)
