--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(make_dend)
 export(make_freq_df)
 export(make_gap_df)
 export(make_ind_val_df)
+export(make_knn_clust)
 export(make_neigh_text)
 export(make_sil_df)
 export(make_sil_plot)
